[package]
name = "leson9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode="1.3.3"
serde = { version = "1.0", features = ["derive"] }
image= "0.24.7"
clap = { version = "4.4.7", features = ["derive"] }
